tests/NormalTests/paczka1/small_fuzzy/99992763.err
Error in line 7: 0NW A85 74,5
Error in line 11: 0NW A626 69,8
